# goph420-w2025-lab04-stMD

./: README.md  pyproject.toml  requirements.txt
examples/: driver.py
src/lab_04/: gutenberg_richter.py  regression.py
